# opentelemetry-instrumentation-sanic

./: .gitignore  .pre-commit-config.yaml  README.md  prek.toml  pyproject.toml  tox.ini
.github/workflows/: ci.yml  publish.yml
examples/: manual_app.py
src/opentelemetry/instrumentation/sanic/: __init__.py  _attributes.py  _instrumentor.py  _metric_attributes.py  _metrics.py  _middleware.py  _request.py  _span.py  _span_attributes.py  _url_filter.py  exceptions.py  package.py  version.py
tests/: conftest.py  test_exceptions.py  test_instrumentor.py  test_integration.py  test_metric_attributes.py  test_metrics.py  test_middleware.py  test_package.py  test_public_api.py  test_request.py  test_sanic_instrumentor.py  test_span.py  test_span_attributes.py  test_url_filter.py
