[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "opentelemetry-instrumentation-sanic"
# Version is derived from the latest git tag by hatch-vcs; see [tool.hatch.version].
dynamic = ["version"]
description = "Zero-code OpenTelemetry instrumentation for the Sanic web framework"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Pham Le Gia Dai" }]
keywords = ["opentelemetry", "instrumentation", "sanic", "tracing", "asgi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
]

# Runtime dependencies only. Sanic itself is NOT a hard dependency: this is an
# instrumentation *for* Sanic, activated only in environments that already ship
# it. It is declared under the optional "instruments" extra instead.
# Floors chosen so the stable `opentelemetry.semconv.attributes.*` modules are
# available (they replaced the deprecated `semconv.trace.SpanAttributes` in
# API 1.26 / semantic-conventions 0.47b0).
dependencies = [
    "opentelemetry-api >= 1.26.0",
    "opentelemetry-instrumentation >= 0.47b0",
    "opentelemetry-semantic-conventions >= 0.47b0",
]

[project.optional-dependencies]
instruments = ["sanic >= 20.12.0"]
test = [
    "pytest >= 7.0",
    "pytest-asyncio >= 0.21",
    # sanic-testing's ASGI client must match the sanic release line.
    "sanic == 24.6.0",
    "sanic-testing == 24.6.0",
    "opentelemetry-sdk >= 1.26.0",
]
dev = [
    "ruff >= 0.6",
    "tox >= 4.0",
    "prek >= 0.0.1",
    "build >= 1.0",
]

# This entry point is what makes the instrumentation "zero-code": the
# `opentelemetry-instrument` launcher discovers and activates it automatically.
[project.entry-points.opentelemetry_instrumentor]
sanic = "opentelemetry.instrumentation.sanic:SanicInstrumentor"

# --------------------------------------------------------------------------- #
# Build backend: version from VCS (git tags)                                  #
# --------------------------------------------------------------------------- #
[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
# Writes the resolved version to a file so it is importable from a source tree.
version-file = "src/opentelemetry/instrumentation/sanic/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/opentelemetry"]

[tool.hatch.build.targets.sdist]
include = ["src", "tests", "examples", "README.md", "pyproject.toml"]

# --------------------------------------------------------------------------- #
# Test / lint tooling                                                         #
# --------------------------------------------------------------------------- #
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 88
target-version = "py310"
src = ["src", "tests", "examples"]
extend-exclude = ["_version.py"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "C4", "BLE", "RUF"]
# Line length is enforced by the formatter; long docstrings/comments are exempt.
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["opentelemetry.instrumentation.sanic"]
